syntax = "proto3";

package spine.web.test.given;

import "spine/options.proto";
import "spine/core/user_id.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.web.test.given";
option java_outer_classname = "UserCommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

message AddUserInfo {

    spine.core.UserId id = 1;

    string full_name = 2 [(required) = true];
}
