syntax = "proto3";

package spine.test.web;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.web";
option java_outer_classname = "TaskProto";
option java_multiple_files = true;

message TaskId {
    string uuid = 1;
}

message Task {
    option (entity).visibility = FULL;

    TaskId id = 1;
    string title = 2;
}
